<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/midori"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MyActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:padding="10dp"
        android:src="@drawable/cropcomparelogo" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/midoriAccent">

        <Spinner
            android:id="@+id/stateSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="50dp"/>

        <EditText
            android:id="@+id/acreage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/acreage_hint"
            android:inputType="number" />

        <FrameLayout
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="22dp"
            android:layout_marginEnd="@dimen/activity_horizontal_margin">

            <Button
                android:id="@+id/fab_button"
                android:layout_width="@dimen/fab_size"
                android:layout_height="@dimen/fab_size"
                android:layout_gravity="center"
                android:background="@drawable/ripple_round"
                android:elevation="5dp"
                android:stateListAnimator="@anim/fab_anim"
                android:text="@string/next_button" />

        </FrameLayout>
    </RelativeLayout>
</LinearLayout>
